app.css
svg {
  background-color: #fff;
  cursor: default;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -o-user-select: none;
  user-select: none;
}

#subset {
  /*position: absolute;*/
  float:left;margin-right:.5em;
  width: 100%;
  height: 100%;
  padding: 10px;
  overflow:scroll;
  background-color: white;
  /*-webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  border-radius: 10px;
  -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
  -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);*/
  pointer-events: none;
}

#setx {
  /*position: absolute;*/
  float:left;margin-right:.5em;
  width: 100%;
  height: 100%;
  padding: 10px;
  overflow:scroll;
  background-color: white;
  /*-webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  border-radius: 10px;
  -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
  -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);*/
/*  pointer-events: none;*/
}

.hidden {
  display: none;
}

.arc path {
  stroke: #fff;
}

svg:not(.active):not(.ctrl) {
  cursor: crosshair;
}

path.link {
  fill: none;
  stroke: #000;
  stroke-width: 2px;
  cursor: default;
}

svg:not(.active):not(.ctrl) path.link {
  cursor: pointer;
}

path.link.selected {
  stroke-dasharray: 10,3;
}

path.link.dragline {
  pointer-events: none;
}

path.link.hidden {
  stroke-width: 0;
}

circle.node {
  stroke-width: 1.5px;
  cursor: pointer;
}

text {
  font: 12px sans-serif;
  pointer-events: none;
}

text.id {
  text-anchor: middle;
  font-weight: bold;
}

.left {
    width: 33.3%;
    height: 100%; /*was 600px;*/
    box-sizing: border-box; margin: 0;
    overflow:scroll;
}
#main svg {
    width:100%;
    height:100%;   /*was 600px;*/
}
#main.svg-leftpanel svg, #main.svg-rightpanel svg {width: 100%;} /* This is size when left/right panel minimized. Was: calc(100% - 300px);}*/
#main.svg-leftpanel.svg-rightpanel svg {width: 100%;}   /*  Was: calc(100% - 300px);} /*
/* Above changes fix issue when screen gets very small, and right margin is fixed at 300px, obscuring central display, even while left tab is shrinking below 300px */


/* #main.svg-marg-left svg {margin-left:0px;}
#main.svg-marg-right svg {margin-right:0px;} */

#option.navbar {

    padding:.5em;
    margin-bottom:0px;

}
#option {
    position:relative;
    background: #E3F2FD;
}

div.popover.variables {
    max-width:none;
    width:300px;
}
div.popover.variables div.popover-content.form-horizontal {
    padding:0;
}
div.popover.variables div.popover-content.form-horizontal .form-group {
    margin-bottom:0;
}

#leftpanel {
    border:1px solid #ADADAD;
    width: 20%;
    height:calc(100% - 17px);
    position:absolute;top:10px;left:10px;
    background:#F9F9F9;
    padding-right:16px;padding-left:0;padding-top:0;
    z-index:25;
}
#leftpanel #leftContentArea div {display:none;}
#leftpanel #leftContentArea div.active {display:block;}
#leftpanel.expandpanel {width:40%;}
#leftpanel.closepanel {width:1px;}
#leftpanel.closepanel #leftpaneltitle, #leftpanel.closepanel div.btn-toolbar, #leftpanel.closepanel div.row-fluid.closepanel {display:none;}

#rightpanel {
    border:1px solid #ADADAD;
    width:20%;
    height:calc(100% - 17px);
    position:absolute;top:10px;right:10px;
    background:#F9F9F9;
    padding-left:16px;padding-right:0;padding-top:0;
    z-index:25;
}
#rightpanel #rightContentArea div {display:none;}
#rightpanel #rightContentArea div.active {display:block;}
#rightpanel.expandpanel {width:40%;}
#rightpanel.closepanel {width:1px;}
#rightpanel.closepanel #rightpaneltitle, #rightpanel.closepanel div.btn-group-justified, #rightpanel.closepanel div.row-fluid.closepanel {display:none;}

div.sidepanel div.panelbar {
  position:absolute;
}
#leftpanel div#toggleLpanelicon.panelbar {
  left:calc(100% - 16px);
}
#rightpanel div#toggleRpanelicon.panelbar {
  right:calc(100% - 16px);
}
div.sidepanel div.panelbar span {
  display: block;
  width:16px;
  height:576px;
  text-align: center;
  padding-top:258px;
  font-size:.75em;
  color:#ADADAD;
  background:#eee;
}

#main {
    border:1px solid #ADADAD;
    width: 100%;
    margin-bottom:50px;   /* This is the hard coded height of the ticker div.  Was 160px; which gave too much padding and empty bottom space.*/
    position: relative;
}

#spacetools {
    z-index: 17;
}
.spaceTool {
    top:0;
    right:21%;
    margin-right:10px;
    margin-top:10px;
    position:absolute;
}
.spaceTool button:first-child {
    margin-right:1em;
}
.spaceTool button span {
    font-size:1em;
    color:#818181;
    pointer-events:none;
}

#transformations {
    z-index:33;
    height:38%;
    width:14%;
    right:200px;
    top:14px;
    position:absolute;
    background: #fff;
}
#transformations ul, #transformations ul li {
    list-style:none;
    margin-left:0;
    padding-left:0;
}
#transformations ul li {
    padding:1px 4px;
    text-align: left;
}
#transSel li:hover { background-color:rgba(250, 128, 114, 0.5); cursor:pointer;}
#transList li:hover { background-color:rgba(250, 128, 114, 0.5); cursor:pointer;}

.legendary {
    width:10%;
    position:absolute;
    bottom:0;
    right:21%;
    margin-right:10px;
    margin-bottom:10px;
}
.legendary .clearfix {
    margin-bottom:4px;
}
.legendary .rectColor {
    float:left;
    width:20px;
    height:20px;
    margin-right:4px;
    /*opacity: 0.5;*/
}
.legendary .rectColor circle {
    opacity: 0.5;
}
.legendary .rectLabel {
    float:left;
}

.logbox {
    width:15%;
    position:absolute;
    bottom:0;
    left:21%;
    margin-left:10px;
    margin-bottom:10px;
}
.logbox .clearfix {
    margin-bottom:4px;
}
.logbox .rectColor {
    float:left;
    width:20px;
    height:20px;
    margin-left:4px;
    opacity: 0.5;
}
.logbox .rectLabel {
    float:left;
}

#sandbox {
    width:500px;
    height:400px;
}

/* p { padding-left: 15px; } */

path {
    fill: steelblue;
}

.axis path,
.axis line {
  fill: none;
  stroke: #000;
  shape-rendering: crispEdges;
}

.brush .extent {
    stroke: #fff;
    fill-opacity: .125;
    shape-rendering: crispEdges;
}

.handle {
  fill: #fff;
  stroke: #000;
  stroke-opacity: .5;
  stroke-width: 1.25px;
  pointer-events: fill;
}

table, th, td {
    border-collapse: collapse;text-align:right;
}
td {
    padding:4px;
}

/* Carousel */
.carousel-indicators {
    top:20px;
    bottom:auto;
}
.carousel-indicators li {
    border: 1px solid #818181;
}
.carousel-indicators li.active {
    background-color: #818181;
}
.carousel-indicators li#create, .carousel-indicators li#delete {
    border: 0;
    border-radius: 0;
    background-color: inherit;
    text-indent:0;
    font-size:12px;
    width:12px;
    height:12px;
    line-height:12px;
}
.carousel-indicators li#create .glyphicon {
    top:0;
}

.carousel-linked-nav,
.item img {
  display: block;
  margin: 0 auto;
}

.carousel-linked-nav {
  width:200px;
  margin: 10px auto;
}
.carousel-linked-nav li {position:relative;}

#carouselLeft {position:absolute;top:50%;left:calc(16px + 20%);z-index:30;font-size:2em;}
#carouselRight {position:absolute;top:50%;right:calc(16px + 20%);z-index:30;font-size:2em;}

.lowerError {
    fill: #4682b4;
}

.upperError {
  fill: silver;
  fill-opacity: 0.65;
}

.line {
  fill: #4682b4;
}

.nofill {
  fill: none;
}



#searchvar{
  background: #fff url(icoX.gif) no-repeat right -10px center;
  border: 1px solid #999;
  padding: 3px 18px 3px 4px;     /* Use the same right padding (18) in jQ! */
  border-radius: 3px;
  transition: background 0.4s;
}
#searchvar.x  { background-position: right 5px center; } /* (jQ) Show icon */
#searchvar.onX{ cursor: pointer; }

